adicionando rotas de produto
